@@ -1,7 +1,9 @@
-2014/09/22 (1.2.38)
+2014/09/22 (1.2.40)
 - Fixed wrong oggenc installation hint.
 - Fixed database initialization.
 - Fixed config file autocreation.
+- Fixed next track selection.
+- Improved pre-packaged file selection.
 
 2014/07/16 (1.2.34)
 - Fixed setting dupes to 0.
